Maps now come from database. Also cleaned up javascript.

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 
     <title>Perkleit</title>
     
-    <script type="text/javascript" src="/js/jquery-1.7.2.min.js"> </script>
-    <script type="text/javascript" src="/js/jquery.hotkeys.js"> </script>
-    <script type="text/javascript" src="/js/perkleit.js"> </script>
+    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"> </script>
+    <script type="text/javascript" src="/js/jquery.hotkeys.min.js"> </script>
+    <script type="text/javascript" src="/js/perkleit.min.js"> </script>
     
     <link rel="stylesheet" href="style.css" />
 </head>
